[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }
dialoguer = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
strum = { version = "0.25.0", features = ["derive"] }
ureq = "2.9.0"
